제약조건 및 입력값 검증