@@ -5,49 +5,72 @@ import org.example.be17pickcook.product.repository.ProductRepository;
 import org.example.be17pickcook.product.model.Product;
 import org.example.be17pickcook.product.model.ProductDto;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true) // 기본은 읽기 전용
 public class ProductService {
 
     private final ProductRepository productRepository;
 
-    // 등록
+    // 등록 (쓰기)
+    @Transactional
     public ProductDto.Res register(ProductDto.Register dto) {
         Product product = dto.toEntity();
-        productRepository.save(product);
-        return ProductDto.Res.from(product);
+        Product saved = productRepository.save(product);
+        return ProductDto.Res.from(saved);
     }
 
-    // 전체 조회
+    // 전체 조회 (읽기)
     public List<ProductDto.Res> findAll() {
         return productRepository.findAll()
                 .stream()
                 .map(ProductDto.Res::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // 단건 조회
+    // 단건 조회 (읽기)
     public ProductDto.Res findById(Long id) {
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("상품을 찾을 수 없습니다."));
+                .orElseThrow(() -> new IllegalArgumentException("상품을 찾을 수 없습니다: id=" + id));
         return ProductDto.Res.from(product);
     }
 
-    // 수정
+    // 수정 (쓰기) - DTO가 엔티티에 값 반영
+    @Transactional
     public ProductDto.Res update(Long id, ProductDto.Update dto) {
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("상품을 찾을 수 없습니다."));
+                .orElseThrow(() -> new IllegalArgumentException("상품을 찾을 수 없습니다: id=" + id));
+
         dto.apply(product);
-        productRepository.save(product);
         return ProductDto.Res.from(product);
     }
 
-    // 삭제
+    // 가격만 변경 (쓰기) → 편의 메서드 실제 사용
+    @Transactional
+    public void changePrice(Long id, Integer price) {
+        Product product = productRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("상품을 찾을 수 없습니다: id=" + id));
+        product.changePrice(price); // 편의 메서드 사용 → 회색표시 사라짐
+    }
+
+    // 할인율만 변경 (쓰기) → 편의 메서드 실제 사용
+    @Transactional
+    public void changeDiscountRate(Long id, Integer rate) {
+        Product product = productRepository.findById(id)
+                .orElseThrow(() -> new IllegalArgumentException("상품을 찾을 수 없습니다: id=" + id));
+        product.changeDiscountRate(rate); // 편의 메서드 사용
+    }
+
+    // 삭제 (쓰기)
+    @Transactional
     public void delete(Long id) {
+        if (!productRepository.existsById(id)) {
+            throw new IllegalArgumentException("상품을 찾을 수 없습니다: id=" + id);
+        }
         productRepository.deleteById(id);
     }
 }
